Close edit view after edit message

--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -41,7 +41,8 @@
                                 class="text-black"
                                 [message]="message"
                                 [edit]="true"
-                                [chatType]="chatType">
+                                [chatType]="chatType"
+                                (saveClicked)="toggleEditInput(i)">
                             </app-chat-input>
                         }
                     </div>
