Edit thread messages

--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -39,6 +39,7 @@
                         } @else {
                             <app-chat-input
                                 class="text-black"
+                                [index]="i"
                                 [message]="message"
                                 [edit]="true"
                                 [chatType]="chatType"
