--- a/src/app/components/shared/popUp/members/members.component.html
+++ b/src/app/components/shared/popUp/members/members.component.html
@@ -10,8 +10,8 @@
 
     <div class="flex flex-col w-full gap-3 p-3 overflow-auto h-52">
 
-        @for (item of membersArray(); track $index) {
-        <app-user [userInfo]="item"
+        @for (item of channelService.channels[channelService.currentIndex()].members; track $index) {
+        <app-user [userInfo]="getUser(usersService.getUserById2(item))"
             (click)="overlayService.profileOverlay( true, item);overlayService.membersOverlay()"></app-user>
         }
     </div>
