--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -31,7 +31,7 @@
     <div
         class="absolute bottom-[-145px] border border-black w-60 h-60 bg-white rounded-[30px] overflow-auto py-4 flex flex-col gap-2">
         @for (item of filterService.filteredMembers(); track $index) {
-        <app-user [userInfo]="item" (click)="channelService.addChoiceMembers(item)"></app-user>
+        <app-user [userInfo]="item" (click)="channelService.toggleUserSelection(item)"></app-user>
         }
     </div>
     }
