--- a/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
@@ -1,4 +1,4 @@
-<div class="h-fit border border-lightpurple rounded-[20px] p-5 flex flex-col gap-5">
+<div [class.border]="!edit" [class.border-lightpurple]="!edit" class="h-fit rounded-[20px] p-5 flex flex-col gap-5">
     <div class="flex justify-between font-bold">
         <span>Channel-Name</span>
 
