--- a/src/app/components/landing-page/register/register.component.html
+++ b/src/app/components/landing-page/register/register.component.html
@@ -71,6 +71,6 @@
       </button>
     </form>
 
-    <button (click)="userService.addUser()">test add User</button>
+    <!--     <button (click)="userService.addUser()">test add User</button> -->
   </div>
 </div>
