--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -1,10 +1,10 @@
 <section class="h-[609px] flex flex-col px-5 py-10 gap-6 text-lg bg-white rounded-[30px] max-w-[870px]">
-  
+
   <div class="flex justify-between">
     <h2 class="text-2xl font-bold">Channel erstellen</h2>
 
-    <img (click)="overlayService.addCannelOverlay()"
-      class="hover:scale-[1.1] duration-150 active:scale-[0.9] cursor-pointer" src="/assets/icons/close.svg" alt="" />
+    <img (click)="closeOverlay()" class="hover:scale-[1.1] duration-150 active:scale-[0.9] cursor-pointer"
+      src="/assets/icons/close.svg" alt="" />
   </div>
 
   <p>
