change go back func

--- a/src/app/components/privacy-policy-page/privacy-policy-page.component.html
+++ b/src/app/components/privacy-policy-page/privacy-policy-page.component.html
@@ -1,13 +1,7 @@
 <section class="flex items-center justify-center w-full h-screen bg-primary">
-  <div
-    class="bg-white min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8"
-  >
-    <img
-      routerLink=""
-      class="size-10 hover:scale-[1.1] cursor-pointer duration-150"
-      src="/assets/icons/back.svg"
-      alt=""
-    />
+  <div class="bg-white min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8">
+    <img (click)="goBack()" class="size-10 hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/back.svg"
+      alt="" />
 
     <div class="flex flex-col gap-4 h-[80vh] overflow-auto w-full text-center">
       <h1 class="text-5xl font-bold text-purple1">Datenschutz</h1>
@@ -80,12 +74,8 @@
         Ren&eacute; M&uuml;nnich, Hauptstra&szlig;e 68, 02742 Friedersdorf
         (nachfolgend All-Inkl). Details entnehmen Sie der
         Datenschutzerkl&auml;rung von All-Inkl:
-        <a
-          href="https://all-inkl.com/datenschutzinformationen/"
-          target="_blank"
-          rel="noopener noreferrer"
-          >https://all-inkl.com/datenschutzinformationen/</a
-        >.
+        <a href="https://all-inkl.com/datenschutzinformationen/" target="_blank"
+          rel="noopener noreferrer">https://all-inkl.com/datenschutzinformationen/</a>.
       </p>
       <p>
         Die Verwendung von All-Inkl erfolgt auf Grundlage von Art. 6 Abs. 1 lit.
@@ -392,19 +382,11 @@
       </p>
       <p>
         Weitere Informationen zu Google Fonts finden Sie unter
-        <a
-          href="https://developers.google.com/fonts/faq"
-          target="_blank"
-          rel="noopener noreferrer"
-          >https://developers.google.com/fonts/faq</a
-        >
+        <a href="https://developers.google.com/fonts/faq" target="_blank"
+          rel="noopener noreferrer">https://developers.google.com/fonts/faq</a>
         und in der Datenschutzerkl&auml;rung von Google:
-        <a
-          href="https://policies.google.com/privacy?hl=de"
-          target="_blank"
-          rel="noopener noreferrer"
-          >https://policies.google.com/privacy?hl=de</a
-        >.
+        <a href="https://policies.google.com/privacy?hl=de" target="_blank"
+          rel="noopener noreferrer">https://policies.google.com/privacy?hl=de</a>.
       </p>
       <p>
         Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a>
