--- a/src/app/components/legal-notice-page/legal-notice-page.component.html
+++ b/src/app/components/legal-notice-page/legal-notice-page.component.html
@@ -3,7 +3,7 @@
 
     <div class="bg-white lg:min-w-[670px] min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8">
 
-        <img routerLink="" class="size-10 hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/back.svg" alt="">
+        <img (click)="goBack()" class="size-10 hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/back.svg" alt="">
 
         <div class="flex flex-col gap-4">
             <h1 class="text-5xl font-bold text-purple1">Impressum</h1>
