--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,11 +1,11 @@
-:host {
-  height: 100vh;
-  max-height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-}
+// :host {
+//   height: 100vh;
+//   max-height: 100vh;
+//   width: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   box-sizing: border-box;
+// }
 
 
 
@@ -123,7 +123,6 @@
   left: 0;
   top: 0;
   bottom: 0;
-  // z-index: 10;
 }
 
 .nav-container.active {
@@ -135,6 +134,7 @@
 /* Channel (Fade-Effekt) */
 .channel-container {
   opacity: 0;
+  display: none;
   transition: opacity 0.3s ease, transform 0.3s ease;
   transform: scale(0.80);
 }
@@ -142,7 +142,13 @@
 .channel-container.active {
   opacity: 1;
   transform: scale(1);
+  display: flex;
 }
+
+
+
+
+
 
 /* Thread (Slide von rechts) */
 .thread-container {
