--- a/src/app/components/shared/popUp/emoji-picker/emoji-picker.component.scss
+++ b/src/app/components/shared/popUp/emoji-picker/emoji-picker.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 260px;
-    padding: 0 4px;
+    padding: 4px;
     gap: 8px;
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.2);
