--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -1,4 +1,4 @@
-<section class="h-[145px] p-3 mx-4 flex flex-1 flex-col  bg-white rounded-[20px] border-lightpurple border-[1px]">
+<section class="relative h-[145px] p-3 mx-4 flex flex-1 flex-col bg-white rounded-[20px] border-lightpurple border-[1px]">
     @if (edit) {
         <textarea #messageEditInput [(ngModel)]="editText" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
     } @else {
@@ -15,11 +15,13 @@
         }
     }
 
-    <app-emoji-picker (emojiPicked)="addEmoji($event)"></app-emoji-picker>
+    @if (showEmojiPiucker) {
+        <app-emoji-picker class="absolute top-0 translate-y-[-100%]" (emojiPicked)="addEmoji($event)"></app-emoji-picker>
+    }
 
     <div class="flex items-center justify-between h-10">
         <div class="flex gap-[25px]">
-            <button><img class="size-5" src="assets/icons/emoji.svg" alt="Emoji"></button>
+            <button (click)="toggleEmojiPicker()"><img class="size-5" src="assets/icons/emoji.svg" alt="Emoji"></button>
             <button><img class="size-5" src="assets/icons/at.svg" alt="@ User"></button>
         </div>
         <button (click)="sendMessage()">
