--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -9,6 +9,11 @@
                     </app-chat-seperator>
                 }
             }
+            @if (showEmojiPicker) {
+                
+                    <app-emoji-picker class="absolute top-0" (emojiPicked)="addEmoji($event)"></app-emoji-picker>
+                
+            }
             <div id="{{ chatType }}{{ i }}" 
                 class="relative flex gap-5 mt-[25px] px-4 py-2 cursor-pointer transition-all hover:bg-primary [&>#msg-options]:hover:opacity-100"
                 [ngClass]="{ 'flex-row-reverse [&>#msg-options]:hover:left-[45px]':userService.fromCurrentUser(message.sender),
@@ -17,6 +22,7 @@
 
                 <app-message-options
                     (editClicked)="toggleEditInput(i)"
+                    (emojiPickerReactions)="toggleEmojiPicker()"
                     [chatType]="chatType"
                     [message]="message"
                     [i]="i"
