--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -3,17 +3,13 @@
 
 
 
-  <div class="absolute flex-col hidden gap-5 md:flex top-4 right-4">
+  <!-- <div class="absolute flex-col hidden gap-5 md:flex top-4 right-4">
     <p class="text-base text-black">Neu bei DABubble?</p>
-
-
     <button (click)="goToRegister()"
       class="px-6 py-2 text-sm font-semibold transition border opacity-[0.8] hover:opacity-[1] hover:scale-[1.1] active:scale-[0.9] hover:border-textgray rounded-full text-purple1">
       Konto erstellen
     </button>
-
-
-  </div>
+  </div> -->
 
 
 
@@ -65,6 +61,7 @@
       </button>
 
       <div class="flex space-x-2">
+
         <button type="submit" class="flex-1 py-2 text-white rounded-full bg-purple1 hover:bg-purple3">
           Anmelden
         </button>
@@ -72,13 +69,15 @@
           type="button" class="flex-1 py-2 border rounded-full border-purple1 text-purple1 hover:bg-primary">
           Gäste-Login
         </button>
+
+
       </div>
     </form>
   </div>
 </div>
 
 
-
+<!-- 
 
 <div class="pt-4 space-y-4 text-center border-t border-lightpurple md:hidden">
 
@@ -89,4 +88,4 @@
     Konto erstellen
   </button>
 
-</div>
+</div> -->
