--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -9,16 +9,16 @@
                     </app-chat-seperator>
                 }
             }
-            @if (showEmojiPicker) {
-                
-                    <app-emoji-picker class="absolute top-0" (emojiPicked)="addEmoji($event)"></app-emoji-picker>
-                
-            }
+            
             <div id="{{ chatType }}{{ i }}" 
                 class="relative flex gap-5 mt-[25px] px-4 py-2 cursor-pointer transition-all hover:bg-primary [&>#msg-options]:hover:opacity-100"
                 [ngClass]="{ 'flex-row-reverse [&>#msg-options]:hover:left-[45px]':userService.fromCurrentUser(message.sender),
                              '[&>div>.msg-content]:hover:bg-white [&>#msg-options]:hover:right-[45px]': !userService.fromCurrentUser(message.sender)
                             }">
+
+                @if (editIndex === i) {
+                    <app-emoji-picker class="absolute top-0" (emojiPicked)="addEmoji($event)"></app-emoji-picker>
+                }
 
                 <app-message-options
                     (editClicked)="toggleEditInput(i)"
