--- a/src/app/components/shared/popUp/emoji-picker/emoji-picker.component.html
+++ b/src/app/components/shared/popUp/emoji-picker/emoji-picker.component.html
@@ -5,7 +5,8 @@
     <button (click)="changeEmojiCat('signs')" class="p-1 transition-all rounded-full active:shadow-inner" [ngClass]="{'shadow-inner hover:shadow-inner': emojiCategory === 'signs', 'shadow-md hover:shadow-lg': emojiCategory !== 'signs'}">🚀</button>
 </header>
 <section class="flex flex-wrap gap-1">
-    @for (emoji of currentEmojicategory; track emoji; let i = $index) {
+    @for (emoji of currentEmojicategory; track $index)
+    {
         <span (click)="pickEmoji(emoji)" class="p-1 rounded-full cursor-pointer size-8">{{ emoji }}</span>
     }
 </section>
