--- a/src/app/components/navigation/channels/channels.component.html
+++ b/src/app/components/navigation/channels/channels.component.html
@@ -15,9 +15,9 @@
 
     <ul id="dropList" class="flex flex-col w-full gap-2 pl-8 text-lg">
 
-
-        @for (channel of channelService.channels; track $index; let i = $index) {
-        <li [style.animation-delay]="(i * 0.05) + 's'" (click)="mainNavService.openChannel(); channelService.openChannel(channel,i); messageService.getMessages(channel); mainNavService.markedChannel($index)"
+        @for (channel of channelService.getUserChannels(channelService.currentUser.id); track $index; let i = $index) {
+        <li [style.animation-delay]="(i * 0.05) + 's'"
+            (click)="mainNavService.openChannel(); channelService.openChannel(channel,i); messageService.getMessages(channel); mainNavService.markedChannel($index)"
             [ngClass]="{'userChecked': $index == mainNavService.ChannelMarked}"
             class="channel-item flex items-center gap-4 min-w-[200px] rounded-[20px] px-10 cursor-pointer w-fit h-9 hover:bg-primary hover:font-bold hover:text-purple3 duration-150">
             <span class="font-bold">#</span> {{channel.name}}
@@ -29,6 +29,7 @@
             <img src="/assets/icons/add_circle.svg" alt="">
             Channel hinzufügen
         </li>
+
     </ul>
 
 </section>
