--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -1,79 +1,110 @@
-<section class="box-border pb-4 bg-white">
-    <div class="box-border flex flex-col">
-        @for (message of messages; track message; let i = $index) {
-            @if (messages !== undefined) {
-                @if (i === 0  || !messageService.isSameDay(messageService.getDateFromTimestamp(message.timestamp), messageService.getDateFromTimestamp(messages[i - 1].timestamp))) {
-                    <app-chat-seperator
-                        class="flex items-center text-[18px] my-[10px] px-4"
-                        [date]="messageService.formatDate(message.timestamp)">
-                    </app-chat-seperator>
-                }
-            }
-            
-            <div id="{{ chatType }}{{ i }}" 
-                class="relative flex gap-5 mt-[25px] px-4 py-2 cursor-pointer transition-all hover:bg-primary [&>#msg-options]:hover:opacity-100"
-                [ngClass]="{ 'flex-row-reverse [&>#msg-options]:hover:left-[45px]':userService.fromCurrentUser(message.sender),
-                             '[&>div>.msg-content]:hover:bg-white [&>#msg-options]:hover:right-[45px]': !userService.fromCurrentUser(message.sender)
-                            }">
+<section class="box-border h-full pb-4 bg-white">
+  <div #scrollContainer class="box-border flex flex-col h-full overflow-y-auto scroll-smooth">
+    @for (message of messages; track message; let i = $index) { @if (i === 0 ||
+    !messageService.isSameDay(
+    messageService.getDateFromTimestamp(message.timestamp),
+    messageService.getDateFromTimestamp(messages[i - 1].timestamp) ) ) {
+    <app-chat-seperator
+      class="flex items-center text-[18px] my-[10px] px-4"
+      [date]="messageService.formatDate(message.timestamp)"
+    >
+    </app-chat-seperator>
+    }
 
-                @if (editIndex === i) {
-                    <app-emoji-picker class="absolute top-0" (emojiPicked)="addEmoji($event)"></app-emoji-picker>
-                }
+    <div
+      id="{{ chatType }}{{ i }}"
+      class="relative flex gap-5 mt-[25px] px-4 py-2 cursor-pointer transition-all hover:bg-primary [&>#msg-options]:hover:opacity-100"
+      [ngClass]="{
+        'flex-row-reverse [&>#msg-options]:hover:left-[45px]':
+          userService.fromCurrentUser(message.sender),
+        '[&>div>.msg-content]:hover:bg-white [&>#msg-options]:hover:right-[45px]':
+          !userService.fromCurrentUser(message.sender)
+      }"
+    >
+      @if (editIndex === i) {
+      <app-emoji-picker
+        class="absolute top-0"
+        (emojiPicked)="addEmoji($event)"
+      ></app-emoji-picker>
+      }
 
-                <app-message-options
-                    (editClicked)="toggleEditInput(i)"
-                    (emojiPickerReactions)="toggleEmojiPicker()"
-                    [chatType]="chatType"
-                    [message]="message"
-                    [i]="i"
-                    [messageFromCurrentUser]="userService.fromCurrentUser(message.sender)"
-                    id="msg-options"
-                    class="absolute top-0 translate-y-[-23px] opacity-0"></app-message-options>
-                <div>
-                    <img class="min-w-[50px] size-[50px] rounded-full" src="{{ userService.getUserById2(message.sender)?.avatar }}" alt="Avatar">
-                </div>
-                <div class="flex flex-col max-w-full gap-2">
-                    <div class="flex items-center gap-5" [ngClass]="{ 'justify-end':userService.fromCurrentUser(message.sender)}">
-                        <span class="text-lg font-bold">{{ userService.getUserById2(message.sender)?.name }}</span>
-                        <span class="text-sm">{{ messageService.formatTime(message.timestamp) }}</span>
-                    </div>
-                    <div class="flex msg-content" id="msg-content"
-                        class="bg-primary p-[15px] rounded-[30px] max-w-full"
-                        [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]':userService.fromCurrentUser(message.sender), ' rounded-ss-none': !userService.fromCurrentUser(message.sender) }">
-                        @if (editIndex !== i) {
-                            <span class="max-w-full">{{ message.message }}</span>
-                        } @else {
-                            <app-chat-input
-                                class="text-black"
-                                [index]="i"
-                                [message]="message"
-                                [edit]="true"
-                                [chatType]="chatType"
-                                (saveClicked)="toggleEditInput(i)">
-                            </app-chat-input>
-                        }
-                    </div>
-                    
-                    @if (message.threadId !== '' && chatType !== 'thread') {
-                        <app-chat-message-answer
-                            class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
-                            [ngClass]="{'self-end':userService.fromCurrentUser(message.sender)}"
-                            [message]="message"
-                            [chatType]="chatType"
-                            [i]="i">
-                        </app-chat-message-answer>
-                    }
+      <app-message-options
+        (editClicked)="toggleEditInput(i)"
+        (emojiPickerReactions)="toggleEmojiPicker()"
+        [chatType]="chatType"
+        [message]="message"
+        [i]="i"
+        [messageFromCurrentUser]="userService.fromCurrentUser(message.sender)"
+        id="msg-options"
+        class="absolute top-0 translate-y-[-23px] opacity-0"
+      ></app-message-options>
 
-                    @if (message.reactions.length > 0) {
-                        <app-chat-message-reactions
-                            class="flex items-center gap-2 w-max"
-                            [ngClass]="{'self-end pr-[5px]':userService.fromCurrentUser(message.sender)}"
-                            [message]="message">
-                        </app-chat-message-reactions>
-                    }
-                </div>
-            </div>
+      <div>
+        <img
+          class="min-w-[50px] size-[50px] rounded-full"
+          [src]="userService.getUserById2(message.sender)?.avatar"
+          alt="Avatar"
+        />
+      </div>
+
+      <div class="flex flex-col max-w-full gap-2">
+        <div
+          class="flex items-center gap-5"
+          [ngClass]="{
+            'justify-end': userService.fromCurrentUser(message.sender)
+          }"
+        >
+          <span class="text-lg font-bold">
+            {{ userService.getUserById2(message.sender)?.name }}
+          </span>
+          <span class="text-sm">
+            {{ messageService.formatTime(message.timestamp) }}
+          </span>
+        </div>
+
+        <div
+          class="flex msg-content bg-primary p-[15px] rounded-[30px] max-w-full"
+          [ngClass]="{
+            'bg-purple2 text-white rounded-se-none rounded-ss-[30px]':
+              userService.fromCurrentUser(message.sender),
+            'rounded-ss-none': !userService.fromCurrentUser(message.sender)
+          }"
+        >
+          @if (editIndex !== i) {
+          <span class="max-w-full">{{ message.message }}</span>
+          } @else {
+          <app-chat-input
+            class="text-black"
+            [index]="i"
+            [message]="message"
+            [edit]="true"
+            [chatType]="chatType"
+            (saveClicked)="toggleEditInput(i)"
+          ></app-chat-input>
+          }
+        </div>
+
+        @if (message.threadId !== '' && chatType !== 'thread') {
+        <app-chat-message-answer
+          class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
+          [ngClass]="{
+            'self-end': userService.fromCurrentUser(message.sender)
+          }"
+          [message]="message"
+          [chatType]="chatType"
+          [i]="i"
+        ></app-chat-message-answer>
+        } @if (message.reactions.length > 0) {
+        <app-chat-message-reactions
+          class="flex items-center gap-2 w-max"
+          [ngClass]="{
+            'self-end pr-[5px]': userService.fromCurrentUser(message.sender)
+          }"
+          [message]="message"
+        ></app-chat-message-reactions>
         }
+      </div>
     </div>
-
+    }
+  </div>
 </section>
