--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -1,6 +1,8 @@
 <section
     class="lg:max-w-[710px] h-fit rounded-[30px] bg-white py-7 px-4 flex flex-col gap-5 shadow-lg relative">
-
+    <div *ngIf="errorMessage" class="px-4 py-2 text-red-600 bg-red-100 border border-red-400 error-box rounded-xl">
+        {{ errorMessage }}
+      </div>
     <div class="flex justify-between">
         <span class="text-2xl font-bold">Leute hinzufügen</span>
         <img (click)="overlayService.addUserOverlay()"
@@ -44,5 +46,6 @@
         active:scale-[0.9]">
         hinzufügen
     </button>
-
+    
+      
 </section>
