Feat: Add quick reaction from message options component

--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -21,6 +21,7 @@
                 }
 
                 <app-message-options
+                    (emojiPicked)="addEmoji($event, message, i)"
                     (editClicked)="toggleEditInput(i)"
                     (emojiPickerReactions)="toggleEmojiPickerReactions(i)"
                     [chatType]="chatType"
