Feat: Toggle emoji picker from reactions component

--- a/src/app/components/shared/chat-message-reactions/chat-message-reactions.component.html
+++ b/src/app/components/shared/chat-message-reactions/chat-message-reactions.component.html
@@ -19,6 +19,6 @@
         </div>
     </button>
 }
-<button>
+<button (click)="toggleEmojiPicker()">
     <img src="assets/icons/add_emoji.svg" alt="Add emoji">
 </button>
